# nimbus

./: .gitignore  Cargo.toml  Cargo.toml.patch  README.md  config.json.example  config.toml.example  install.ps1  install.sh  run.ps1  run.sh  run_performance_tests.ps1  run_performance_tests.sh  start-guideline-ssm.sh  targets.json.example  targets.toml.example
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/ec2-connect-improvements/: design.md  requirements.md  tasks.md
.kiro/steering/: Rust-development.md  product.md  structure.md  tech.md  troubleshooting-guidelines.md
Formula/: ec2-connect.rb  nimbus.rb
benches/: performance_benchmarks.rs
daily_notes/: 2026-01-28.md
docs/: API_REFERENCE.md  CONFIGURATION.md  DATA_MODELS.md  DEVELOPMENT.md  INDEX.md  PERFORMANCE_OPTIMIZATION.md  TROUBLESHOOTING.md  TUTORIALS.md
src/: auto_fix.rs  aws.rs  aws_config_validator.rs  cli.rs  commands.rs  config.rs  diagnostic.rs  diagnostic_feedback.rs  error.rs  error_recovery.rs  health.rs  iam_diagnostics.rs  instance_diagnostics.rs  lib.rs  logging.rs  main.rs  manager.rs  monitor.rs  multi_session.rs  multi_session_ui.rs  network_diagnostics.rs  performance.rs  persistence.rs  port_diagnostics.rs  preventive_check.rs  realtime_feedback.rs  reconnect.rs  report_manager.rs  resource.rs  session.rs  ssm_agent_diagnostics.rs  suggestion_generator.rs  targets.rs  ui.rs  user_messages.rs  vscode.rs
src/commands/: config.rs  connect.rs  database.rs  diagnose.rs  diagnostic_settings.rs  fix.rs  mod.rs  monitoring.rs  multi_session.rs  tui.rs  vscode.rs
